@@ -8,7 +8,9 @@ Version 1.18-10 (opened August 20, 2010)
 	20, 2010.
 
 	* permutest.cca: defaults to 99 permutations instead of 100 (to
-	be consistent).
+	be consistent). Item 'call' no stores the call to permutest()
+	instead of the call of the ordination which is now saved in
+	'testcall'.  This means that update() works now.
 
 	* anova.ccalist: Started to work on the concept of permutation
 	test comparison of several cca/ rda/ capscale models. The first
